--- a/index.html
+++ b/index.html
@@ -2,15 +2,56 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="manifest" href="/site.webmanifest" />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=New+Amsterdam&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ShopEasy</title>
+
+    <!-- Essential Meta Tags -->
+    <title>ShopEasy - Smart Shopping List & Cart Tracker</title>
+    <meta
+      name="description"
+      content="ShopEasy is a simple and intuitive web app that helps you create shopping lists, track items in your cart, and monitor the total value of your purchases."
+    />
+    <meta
+      name="keywords"
+      content="shopping list app, cart tracker, budget shopping, shopping organizer, grocery list, ShopEasy"
+    />
+    <meta name="author" content="ShopEasy" />
+
+    <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+    <meta
+      property="og:title"
+      content="ShopEasy - Smart Shopping List & Cart Tracker"
+    />
+    <meta
+      property="og:description"
+      content="Easily create shopping lists, track carted items, and keep an eye on your total spend with ShopEasy."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://shopeasy-web.pages.dev/" />
+    <meta property="og:image" content="/meta_preview.png" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="ShopEasy - Smart Shopping List & Cart Tracker"
+    />
+    <meta
+      name="twitter:description"
+      content="Stay organized and on budget with ShopEasy. Create lists, track your cart, and monitor spending."
+    />
+    <meta name="twitter:image" content="/meta_preview.png" />
+
+    <!-- Mobile & SEO -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="index, follow" />
   </head>
   <body>
     <div id="root"></div>
