Update Open Graph and Twitter Card image URLs to use absolute paths

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://shopeasy-web.pages.dev/" />
-    <meta property="og:image" content="/meta_preview.png" />
+    <meta
+      property="og:image"
+      content="https://shopeasy-web.pages.dev/meta_preview.png"
+    />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -47,7 +50,10 @@
       name="twitter:description"
       content="Stay organized and on budget with ShopEasy. Create lists, track your cart, and monitor spending."
     />
-    <meta name="twitter:image" content="/meta_preview.png" />
+    <meta
+      name="twitter:image"
+      content="https://shopeasy-web.pages.dev/meta_preview.png"
+    />
 
     <!-- Mobile & SEO -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
